@@ -3,6 +3,8 @@
 
 Version 8.0.12
 
+  - Fix for Bug#28066709, COLLECTION.CREATEINDEX() TEST IS BROKEN AFTER WL#11808 IMPLEMENTATION.
+
   - Fix for Bug#90872 (28027459), FILTERPARAMS CLASS IS NOT NEEDED.
 
   - Fix for Bug#27522054, POSSIBLE ASYNC XPROTOCOL MESSAGE HANDLING PERF ISSUE.
